# chord

./: .gitignore  CMakeLists.txt  LICENSE  README.md  nc
src/chord/: CMakeLists.txt  main.cpp
src/chord/private/chord/: client.cpp  listen_task.cpp  local_node.cpp  receive_task.cpp  serve_task.cpp  update_task.cpp
src/chord/private/crypto/: sha1.cpp
src/chord/private/misc/: command_line.cpp  time.cpp
src/chord/private/net/: net.cpp  types.cpp
src/chord/public/chord/: chord.h  chord_fwd.h  client.h  listen_task.h  local_node.h  receive_task.h  request.h  serve_task.h  types.h  update_task.h
src/chord/public/crypto/: sha1.h
src/chord/public/math/: uuid_generator.h
src/chord/public/misc/: command_line.h  log.h  time.h
src/chord/public/net/: socket_dgram.h  socket_stream.h  types.h
src/sgl/: CMakeLists.txt
src/sgl/private/generic/: generic_platform_memory.cpp  generic_platform_process.cpp
src/sgl/private/hal/: event_pthread.cpp  malloc_ansi.cpp  malloc_binned.cpp  malloc_pool.cpp  platform_memory.cpp  runnable_pthread.cpp  threading.cpp
src/sgl/private/math/: math.cpp  math_simd.cpp
src/sgl/public/: core_fwd.h  core_types.h  coremin.h
src/sgl/public/async/: async.h  future.h
src/sgl/public/containers/: array.h  binary_tree.h  containers.h  containers_fwd.h  linked_list.h  map.h  pair.h  queue.h  sorting.h  string.h
src/sgl/public/generic/: generic_platform.h  generic_platform_atomics.h  generic_platform_math.h  generic_platform_memory.h  generic_platform_process.h  generic_platform_string.h  generic_platform_threads.h
src/sgl/public/hal/: critical_section.h  event.h  event_pthread.h  malloc_ansi.h  malloc_binned.h  malloc_pool.h  memory_base.h  platform.h  platform_atomics.h  platform_crt.h  platform_math.h  platform_memory.h  platform_process.h  platform_string.h  platform_threads.h  pthread_barrier.h  pthread_critical_section.h  runnable.h  runnable_pthread.h  runnable_thread.h  thread_barrier.h  thread_manager.h  thread_safe_counter.h  threading.h
src/sgl/public/math/: mat.h  mat4.h  mat4_simd.h  mat_simd.h  math.h  math_fwd.h  quat.h  quat_simd.h  vec.h  vec2.h  vec3.h  vec3_simd.h  vec4.h  vec4_simd.h  vec_simd.h
src/sgl/public/misc/: build.h
src/sgl/public/templates/: atomic.h  simd.h  (+26 more)
(+16 files in other folders)
